--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=80
 spring.application.name=expo
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+#日志级别
+#logging.level.root=warn
+logging.level.root=debug
