--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.application.name=expo
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 #日志级别
-#logging.level.root=warn
-logging.level.root=debug
+#logging.level.root=error
+logging.level.root=info
