--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=80
 spring.application.name=expo
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+
 #日志级别
-#logging.level.root=error
-logging.level.root=info
+logging.level.root=error
+#logging.level.root=info
